- Leave Section Completed - Changes in Task Section